--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.21",
     "@mui/x-date-pickers": "^7.8.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11"
   },
